# CCTVVideoDownloader

./: .gitignore  CCTVVideoDownloader.rc  CCTVVideoDownloader.sln  CCTVVideoDownloader.vcxproj  CCTVVideoDownloader.vcxproj.filters  CHANGELOG  CMakeLists.txt  LICENSE  LOGGING_GUIDE.md  README.md  README.rst  TODO.md  about.cpp  about.ui  build.py  cctvvideodownloader.h  cctvvideodownloader.ui  concatworker.cpp  concatworker.h  config.cpp  config.h  config.json  ctvd.ui  decrypt.cpp  decrypt.h  decryptworker.h  downloaddialog.cpp  downloaddialog.h  downloadengine.h  downloadmodel.cpp  downloadtask.cpp  downloadtask.h  import.h  main.cpp  main.py  networkcore.cpp  networkcore.h  process.ui  pyproject.toml  resource.h  (+3 more)
.github/ISSUE_TEMPLATE/: bug_report.md  功能请求.md  错误报告.md
.github/workflows/: release.yml  windows-release.yml  windows-tests.yml
changelogs/: v3.5.1-bugfix.md  v3.5.2-bugfix.md  v3.5.2.md  v3.5.3.md  v3.6.0.md  v3.7.0-bugfix.md  v3.7.0.md  v3.8.0.md  v3.8.1.md  v3.8.2.md
config/: config.ini
src/: AboutUI.py  ConcatUI.py  DialogUI.py  DlHandle.py  DownloadUI.py  ImportUI.py  MainUI.py  MainUI.py.bak  SettingUI.py  ThreadHandle.py  __main__.py  about.ui  api.py  app.py  compiled_resources.py  config.cdi  config.json  ctvd.ui  download_engine.py  logger.py  main.py  resources.qrc  settings.py  style.qss  tmp.py  video_process.py
src/cctvvideodownload/: AboutUI.py  DialogUI.py  DlHandle.py  MainUI.py  NwDownload.py  SettingUI.py  ThreadHandle-2.py  ThreadHandle.py  Untitled-1.ipynb  __main__.py  about.ui  app.py  compiled_resources.py  config.cdi  config.ini  ctvd.ui  ctvd_setting.ui  dialog.ui  resources.qrc  tmp.py
src/decrypt/: UDRM_LICENSE.v1.0  decrypt.py  decrypt.wasm  h5.worker_patch.js  ts_decrypt.js  ts_decrypt_api.py
src/head/: about.h  apiservice.h  cctvvideodownloader.h  concat.h  concatworker.h  config.h  decrypt.h  decryptworker.h  directmediafinalizer.h  downloadcoordinator.h  downloadcoordinatorseams.h  downloaddialog.h  downloadengine.h  downloadjob.h  downloadmodel.h  downloadprogresswindow.h  downloadtask.h  ffmpegcliremuxer.h  import.h  logger.h  mediacontainervalidator.h  mediafinalizer.h  tsmerger.h
src/plugins/: __init__.py  cctv_album_api.py  cctv_column_api.py
src/resources/: CCTVVideoDownloader.rc  RCa26840  cctvvideodownloader.qrc  resources.py  resources.qrc
src/source/: about.cpp  apiservice.cpp  cctvvideodownloader.cpp  concat.cpp  concatworker.cpp  config.cpp  decrypt.cpp  decryptworker.cpp  directmediafinalizer.cpp  downloadcoordinator.cpp  downloaddialog.cpp  downloadengine.cpp  downloadmodel.cpp  downloadprogresswindow.cpp  downloadtask.cpp  ffmpegcliremuxer.cpp  import.cpp  logger.cpp  main.cpp  mediacontainervalidator.cpp  mediafinalizer.cpp  setting.cpp  tsmerger.cpp
src/ui/: concat.ui  ctvd.ui  ctvd_setting.ui  dialog.ui  import.ui  process.ui
test/: apiTest.cpp  logicTest.cpp  mainWindowTest.cpp  test.runsettings  test.vcxproj  test.vcxproj.filters
tests/: CMakeLists.txt  cctvvideodownload.py  regression_core_tests.cpp  test_app.py
tests/fakes/: fake_networkaccessmanager.cpp  fake_networkaccessmanager.h  fake_networkreply.cpp  fake_networkreply.h
